--- a/codigo_fonte_useacabeca_phpemysql/examples/ch01/initial/aliens/report.html
+++ b/codigo_fonte_useacabeca_phpemysql/examples/ch01/initial/aliens/report.html
@@ -2,20 +2,20 @@
 <html lang="pt-br">
 <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Aliens Abducted Me - Report an Abduction</title>
+  <title>Aliens Abduziram  o meu cachorro - Você viu o meu cachorro?</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
     <div id="formulario">
        
-        <h2>Aliens Abducted Me - Report an Abduction</h2>
+        <h2>Aliens Abduziram  o meu cachorro - Você viu o meu cachorro?</h2>
 
         <p>Compartilhe a sua história de abdução alienígena:</p>
         <form action="report.php" method="post" >
         <label for="firstname">Primeiro Nome:</label>
-        <input type="text" id="firstname" name="firstname" /><br />
+        <input type="text" id="primeironome" name="primeironome" /><br />
         <label for="lastname">Sobre Nome:</label>
-        <input type="text" id="lastname" name="lastname" /><br />
+        <input type="text" id="sobrenome" name="sobrenome" /><br />
         <label for="email">Seu E-mail?</label>
         <input type="text" id="email" name="email" /><br />
         <label for="whenithappened">Quando isso aconteceu?</label>
@@ -28,11 +28,11 @@
         <input type="text" id="aliendescription" name="aliendescription" size="32" /><br />
         <label for="whattheydid">O que eles fizeram com você?</label>
         <input type="text" id="whattheydid" name="whattheydid" size="32" /><br />
-        <label for="fangspotted">Você viu meu cão Fang?</label>
-        Sim <input id="fangspotted" name="fangspotted" type="radio" value="yes" />
-        Não <input id="fangspotted" name="fangspotted" type="radio" value="no" /><br />
+        <label for="fangspotted">Você viu meu cão Bunda Rachada?</label>
+        Sim <input id="fangspotted" name="fangspotted" type="radio" value="SIM" />
+        Não <input id="fangspotted" name="fangspotted" type="radio" value="NÃO" /><br />
         <img src="fang.jpg" width="100" height="175"
-        alt="My abducted dog Fang." /><br />
+        alt="Meu cão sequestrado Bunda Rachada." /><br />
         <label for="other">Qualquer outra coisa que você deseja adicionar?</label>
         <textarea id="other" name="other"></textarea><br />
         
